# CUDA-Learning

./: README.md
1-gpu-mode/: utils.py
1-gpu-mode/lecture_002/rgb_to_grayscale/: grayscale_kernel.cu
1-gpu-mode/lecture_002/vector_addition/: vector_addition
1-gpu-mode/lecture_003/: pmpp.ipynb
1-gpu-mode/lecture_004/: cuda-mode-session-4.ipynb
1-gpu-mode/lecture_004/1-print_theardId/: Makefile  print_theardId.cu
1-gpu-mode/lecture_004/2-print_theardId/: print_theardId.cu
1-gpu-mode/lecture_004/3-print_theardId/: print_theardId.cu
1-gpu-mode/lecture_004/4-print_theardId/: print_theardId.cu
1-gpu-mode/lecture_005/: matmul_l5.ipynb
1-gpu-mode/lecture_008/: 1-coalesce.md  README.md  coarsening  divergence  occupancy  occupancy.cu
2-setup-learn/NN-CUDA-Example-master-fork/: Makefile  README.md
2-setup-learn/NN-CUDA-Example-master-fork/pytorch/: CMakeLists.txt  setup_v1_改成自己环境.py  setup_v2_添加ninja用绝对路径.py
3-kernel-lerrn/1-element-wise-example/: README.md
3-kernel-lerrn/1-element-wise-example/kernel/: element_wise_kernel.cu
3-kernel-lerrn/1-element-wise-example/pytorch/: setup.py  time.py
